--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Scanner</title>
+    <title>QR Code Scanner Made by detective rits</title>
     <link rel="stylesheet" href="https://rawgit.com/schmich/instascan-builds/master/css/instascan.min.css">
 </head>
 <body>
